<resources>
    <string name="app_name">Team Alerts</string>
    <!-- Strings used for fragments for navigation -->
    <string name="splash_screen_title">STAY TUNED</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome to Team Alerts App !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="content_description">image</string>
    <string name="login_title">SIGN IN</string>
    <string name="et_hint_email_id">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password"><u>I forgot my password</u></string>
    <string name="btn_lbl_login">SIGN IN</string>
    <string name="no_account">No account ?</string>
    <string name="register"><u>SIGN UP</u></string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Conditions </u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>LOGIN</u></string>

    <!--Registration validation details-->
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="registry_successfull">Well registred. Sign in now.</string>
    <string name="please_wait">I\'m working… Wait a while….</string>
    <string name="valid_credentials">Valid credentials</string>

    <!--Forgot Password Activity-->
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your e-mail address we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="reset_password_mail_sent_success">Email sent successfully</string>


    <!--User Profile Activity-->
    <string name="title_complete_profile">PLEASE COMPLETE YOUR PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_non_binary">NON-BINARY</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_stotage_permission_denied">You denied storage permission. It still enabled from settings</string>
    <string name="image_selection_failed">Image selection failed.</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number</string>
    <string name="msg_profile_updtae_sucess">Profile details updated. Thanks.</string>

    <!--User dashboard Activity-->
    <string name="title_alert">My Alerts</string>
    <string name="title_team">My Teams</string>
    <string name="title_settings">My Settings</string>


    <string name="click_back_again_to_exit">Please click back again to exit.</string>
    <string name="teams_menu_create">create new team</string>
    <string name="teams_menu_join">join new team</string>
    <string name="teams_menu_display">display</string>
    <string name="teams_menu_display_my_teams">my teams</string>
    <string name="teams_menu_display_all_teams">all teams</string>
    <string name="no_team_item_found">You are not registered for any team alerts.</string>
    <string name="title_create_new_team">CREATE NEW TEAM</string>
    <string name="et_hint_team_title">Team Name</string>
    <string name="et_hint_team_city">Team City</string>
    <string name="et_hint_team_description">Team Description</string>
    <string name="rb_lbl_team_private">PRIVATE TEAM</string>
    <string name="rb_lbl_team_public">PUBLIC TEAM</string>
    <string name="btn_lbl_join_new_team">JOIN TEAM</string>
    <string name="err_msg_enter_team_name">Please enter team name</string>
    <string name="err_msg_enter_team_city">Please enter team city</string>
    <string name="err_msg_enter_team_description">Please enter team description</string>
    <string name="team_stored_successfull">New Team Created</string>
    <string name="btn_lbl_create_new_team">CREATE TEAM</string>
    <string name="no_alert_item_found">You haven\'t subscribed to any alerts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_team">TEAM DETAILS</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_contact_owner">request registration</string>
    <string name="no_team_alert_item_found">No alert was issued from this team</string>
    <string name="btn_lbl_view_teams_alerts">SHOW ALERTS</string>
    <string name="btn_lbl_create_new_team_alert">CREATE ALERT</string>
    <string name="btn_lbl_write_to_owner">WRITE TO OWNER</string>
    <string name="title_join_new_team">JOIN NEW TEAM</string>
    <string name="note_text_no_team_found_yet_kindly_create_one">No team alerts found, create one.</string>
    <string name="edit_text_hint_location">Location</string>


</resources>