<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.activities.teams_activities.create_new_team.CreateNewTeamActivity">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar_create_new_team_activity"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@drawable/app_gradient_color_background"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingStart="@dimen/toolbar_title_paddingStart"
        android:paddingEnd="0dp"
        android:text="@string/title_create_new_team"
        android:textColor="@color/white"
        android:textSize="@dimen/toolbar_title_text_size"
        android:textStyle="bold" />

</androidx.appcompat.widget.Toolbar>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:fillViewport="true"
    android:scrollbars="none"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_create_new_team_activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_team_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/create_new_team_header_image_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_team_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorImageViewBackground"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/iv_team_get_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:contentDescription="@string/content_description"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/create_team_get_icon_padding"
                android:src="@drawable/ic_baseline_image_search_24" />
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_team_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/et_hint_team_title"
            android:textColorHint="@color/colorSecondaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_team_image">

            <ch.hevs.ig.android.zemrani.teamalers.remaked.utils.customed_widgets.MontSerratEditTextRegular
                android:id="@+id/et_team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="@dimen/et_padding"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/et_textSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_team_city"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/et_hint_team_city"
            android:textColorHint="@color/colorSecondaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_team_name">

            <ch.hevs.ig.android.zemrani.teamalers.remaked.utils.customed_widgets.MontSerratEditTextRegular
                android:id="@+id/et_team_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="@dimen/et_padding"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/et_textSize" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_team_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/et_hint_team_description"
            android:textColorHint="@color/colorSecondaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_team_city">

            <ch.hevs.ig.android.zemrani.teamalers.remaked.utils.customed_widgets.MontSerratEditTextRegular
                android:id="@+id/et_team_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:padding="@dimen/et_padding"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/et_textSize" />
        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/rg_team_public"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_radio_button_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/btn_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_team_description">


            <ch.hevs.ig.android.zemrani.teamalers.remaked.utils.customed_widgets.CustRadioButton
                android:id="@+id/rb_team_private"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/profile_radio_button_marginStartEnd"
                android:layout_weight="1"
                android:background="@drawable/drawable_radio_button_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/rb_lbl_team_private"
                android:textColor="@drawable/drawable_radio_button_text_color_selector"
                android:textStyle="bold" />

            <ch.hevs.ig.android.zemrani.teamalers.remaked.utils.customed_widgets.CustRadioButton
                android:id="@+id/rb_team_public"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/profile_radio_button_marginStartEnd"
                android:layout_weight="1"
                android:background="@drawable/drawable_radio_button_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/rb_lbl_team_public"
                android:textColor="@drawable/drawable_radio_button_text_color_selector"
                android:textStyle="bold" />


        </RadioGroup>

        <ch.hevs.ig.android.zemrani.teamalers.remaked.utils.customed_widgets.MontSerratButtonBold
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/btn_lbl_submit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_textSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_team_public" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>