<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@color/colorOffWhite"
tools:context=".ui.activities.teams_activities.join_new_team.JoinNewTeamActivity">


<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar_join_team"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@drawable/app_gradient_color_background"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingStart="@dimen/toolbar_title_paddingStart"
        android:paddingEnd="0dp"
        android:text="@string/title_join_new_team"
        android:textColor="@color/white"
        android:textSize="@dimen/toolbar_title_text_size"
        android:textStyle="bold" />

</androidx.appcompat.widget.Toolbar>


<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rv_all_teams"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="2dp"
    android:visibility="visible"
    app:layout_constraintTop_toBottomOf="@+id/toolbar_join_team"
    app:layout_constraintBottom_toTopOf="@+id/btn_create_new_team"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent" />

<TextView
    android:id="@+id/tv_no_records_available"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/note_text_no_team_found_yet_kindly_create_one"
    android:textSize="@dimen/no_records_available_text_size"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.487"
    tools:visibility="visible" />

    <ch.hevs.ig.android.zemrani.teamalers.remaked.utils.customed_widgets.MontSerratButtonBold
        android:id="@+id/btn_create_new_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_lbl_create_new_team"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
/>





</androidx.constraintlayout.widget.ConstraintLayout>
